Amine's SANER paper.

--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <div class="subnav">
           <h5>Navigation</h5>
 	  <ul>
+            <li><a href="#2021">2021</a></li>
             <li><a href="#2020">2020</a></li>
             <li><a href="#2019">2019</a></li>
 	    <li><a href="#2018">2018</a></li>
@@ -65,6 +66,16 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
      </div>
 
      <div class="content">
+       <h2><a name="2021"></a>2021</h2>
+       <br/><h3>Conference</h3>
+       <ul>
+         <li>
+           BARRAK, A., EGHAN, E.E. and ADAMS, B. (2021). <a href="publications/2021/saner.pdf">On the Co-evolution of ML Pipelines and Source Code - Empirical Study of DVC Projects</a>, in Proceedings of the 28th IEEE International Conference on Software Analysis, Evolution, and Reengineering, SANER (Hawaii, USA), to appear. (Acceptance ratio: 42/165=25%)&nbsp;<a href="publications/2021/saner.bib"><i>BibTeX</i></a>
+         </li>
+          </ul>  
+          <br/><br/><br/><br/>
+    </div>
+    <div class="content">
        <h2><a name="2020"></a>2020</h2>
        <br/><h3>Journal</h3>
        <ul>
@@ -84,6 +95,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
          <li>OPENJA, M., ADAMS, B. and KHOMH, F. (2020). <a name="icsme_moses">Analysis of Modern Release Engineering Topics - A Large-Scale Study using StackOverflow</a>, in Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, ICSME (Adelaide, Australia), to appear. (Acceptance ratio: 58/201=28.9%)&nbsp;<a href="publications/2020/icsme_moses.bib"><i>BibTeX</i></a></li>
          <li>GRICHI, M., ABIDI, M., JAAFAR, F., EGHAN, E.E. and ADAMS, B. (2020). <a href="publications/2020/qrs_manel.pdf">On the Impact of Inter-language Dependencies in Multi-language Systems</a>, in Proceedings of the 2020 IEEE International Conference on Software Quality, Reliability and Security, QRS (Macau, China), to appear. (Acceptance ratio: 36/125=28.8%)&nbsp;<a href="publications/2020/qrs_manel.bib"><i>BibTeX</i></a>&nbsp;<span style="color: black; font-weight: bold">(Recommended to the IEEE Transactions on Reliability)</span></li>        
          <li>VARADHARAJAN, V.S., ST-ONGE, D., ADAMS, B. and BELTRAME, G. (2020). <a href="https://mistlab.ca/papers/SwarmRelays/Supplementary.pdf">Swarm Relays: Distributed Self-Healing Ground-and-Air Connectivity Chains</a>, in Proceedings of the 2020 IEEE/RSJ International Conference on Intelligent Robots and Systems, IROS (Las Vegas, US), to appear. (Acceptance ratio: 1,408/2,996=47%)&nbsp;<a href="publications/2020/iros.bib"><i>BibTeX</i></a></li>
+       </ul>
          <br/><br/><br/><br/>
               </div>
      <div class="content">
