--- a/publications.html
+++ b/publications.html
@@ -67,8 +67,16 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
 
      <div class="content">
        <h2><a name="2021"></a>2021</h2>
+       <br/><h3>Journal</h3>
+       <ul>
+         <li>FOUNDJEM, A. and ADAMS, B. (2021). <a href="publications/2021/emse_armstrong.pdf">Release Synchronization in Software Ecosystems</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_armstrong.bib"><i>BibTeX</i></a></li>
+          </ul>  
+          <br/><br/><br/><br/>
        <br/><h3>Conference</h3>
        <ul>
+         <li>
+           FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2021). <a href="publications/2021/icse_armstrong.pdf">Onboarding vs. Diversity, Productivity and Quality -- Empirical Study of the OpenStack Ecosystem</a>, in Proceedings of the 43rd International Conference on Software Engineering, ICSE (Madrid, Spain), to appear. (Acceptance ratio: 138/602=22.92%)&nbsp;<a href="publications/2021/icse_armstrong.bib"><i>BibTeX</i></a>
+         </li>
          <li>
            BARRAK, A., EGHAN, E.E. and ADAMS, B. (2021). <a href="publications/2021/saner.pdf">On the Co-evolution of ML Pipelines and Source Code - Empirical Study of DVC Projects</a>, in Proceedings of the 28th IEEE International Conference on Software Analysis, Evolution, and Reengineering, SANER (Hawaii, USA), to appear. (Acceptance ratio: 42/165=25%)&nbsp;<a href="publications/2021/saner.bib"><i>BibTeX</i></a>
          </li>
