--- a/publications.html
+++ b/publications.html
@@ -177,7 +177,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <br/><h3>Journal</h3>
        <ul>
     	 <li>
-	   BEZEMER, C.-P., MCINTOSH, S., GERMAN, D. M. and HASSAN, A. E. (2017). <a href="http://sail.cs.queensu.ca/Downloads/EMSE2017_AnEmpiricalStudyOfUnspecifiedDependenciesInMake-BasedBuildSystems.pdf">An Empirical Study of Unspecified Dependencies in Make-Based Build Systems</a>, Empirical Software Engineering, 22 (6), p. 3117–3148, Springer.&nbsp;<a href="publications/2017/emse_cor_paul.bib"><i>BibTeX</i></a>
+	   BEZEMER, C.-P., MCINTOSH, S., ADAMS, B., GERMAN, D. M. and HASSAN, A. E. (2017). <a href="http://sail.cs.queensu.ca/Downloads/EMSE2017_AnEmpiricalStudyOfUnspecifiedDependenciesInMake-BasedBuildSystems.pdf">An Empirical Study of Unspecified Dependencies in Make-Based Build Systems</a>, Empirical Software Engineering, 22 (6), p. 3117–3148, Springer.&nbsp;<a href="publications/2017/emse_cor_paul.bib"><i>BibTeX</i></a>
          </li>	    
          <li>
            G&Oacute;MEZ, M., ADAMS, B., MAALEJ, W., MONPERRUS, M. and ROUVOY, R. (2017). <a href="https://hal.inria.fr/hal-01406422/document">App Store 2.0: From Crowd Information to Actionable Feedback in Mobile Ecosystems</a>, IEEE Software, 34 (2), p. 81-89, IEEE.&nbsp;<a href="publications/2017/maria.bib"><i>BibTeX</i></a>
