--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <br/><h3>Journal</h3>
        <ul>
          <li>FOUNDJEM, A. and ADAMS, B. (2021). <a href="publications/2021/emse_armstrong.pdf">Release Synchronization in Software Ecosystems</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_armstrong.bib"><i>BibTeX</i></a></li>
-          </ul>  
+         <li>BARRAK, A., EGHAN, E., ADAMS, B., and KHOMH, F. (2021). <a href="publications/2021/jss_amine.pdf">Why do Builds Fail? - A Conceptual Replication Study</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a href="publications/2021/jss_amine.bib"><i>BibTeX</i></a></li>
+       </ul>  
           <br/><br/><br/><br/>
        <br/><h3>Conference</h3>
        <ul>
