Added Aquilas' paper.

--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,12 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
          </li>
           </ul>  
           <br/><br/><br/><br/>
-    </div>
+          <br/><h3>Other</h3>
+       <ul>
+	 <li>TCHANJOU NJOMOU, A., BIFONA AFRICA, A.J., ADAMS, B. and FOKAEFS, M. (2021). <a name="saner_aquilas">MSR4ML: Reconstructing artifact traceability in Machine Learning repositories</a> [short], in Proceedings of the 28th IEEE International Conference on Software Analysis, Evolution, and Reengineering, SANER (Hawaii, USA), to appear. (Acceptance ratio: 12/26=46%)&nbsp;<a href="publications/2021/saner_aquilas.bib"><i>BibTeX</i></a></li>
+       </ul>
+       <br/><br/><br/><br/>
+     </div>
     <div class="content">
        <h2><a name="2020"></a>2020</h2>
        <br/><h3>Journal</h3>
