--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <h2><a name="2021"></a>2021</h2>
        <br/><h3>Journal</h3>
        <ul>
+         <li>KUUTILA, M., M&auml;ntyl&auml;, M., CLAES, M., ELOVAINIO, M. and ADAMS, B. (2021). <a href="https://arxiv.org/abs/2104.13713">Individual Differences Limit Predicting Well-being and Productivity Using Software Repositories: A Longitudinal Industrial Study</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_miikka.bib"><i>BibTeX</i></a></li>
          <li>CHOWDHURY, M.A.R., ABDALKAREEM, R., SHIHAB, E. and ADAMS, B. (2021). <a hname="untrivial">On the Untriviality of Trivial Packages: An Empirical Study of npm JavaScript Packages</a>, Transactions on Software Engineering (TSE), IEEE, to appear.&nbsp;<a href="publications/2021/tse_atique.bib"><i>BibTeX</i></a></li>
          <li>FOUNDJEM, A. and ADAMS, B. (2021). <a href="publications/2021/emse_armstrong.pdf">Release Synchronization in Software Ecosystems</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_armstrong.bib"><i>BibTeX</i></a></li>
          <li>BARRAK, A., EGHAN, E., ADAMS, B., and KHOMH, F. (2021). <a href="publications/2021/jss_amine.pdf">Why do Builds Fail? - A Conceptual Replication Study</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a href="publications/2021/jss_amine.bib"><i>BibTeX</i></a></li>
