Fixing broken links.

--- a/log6307.html
+++ b/log6307.html
@@ -37,7 +37,7 @@ title: LOG 6307-E, Advanced topics in DevOps and release engineering
 
 	     <h1><a name="intro"><b>LOG 6307-E</b> Release Engineering -- Applications of Mining Software Repositories</a></h1><br/>
 
-	     <p>LOG6307-E is a grad course given each Fall <b>in English</b> by <a href="http://mcis.polymtl.ca/~bram/">Dr. Bram Adams</a>.</p><br/>
+	     <p>LOG6307-E is a grad course given each Fall <b>in English</b> by <a href="http://mcis.cs.queensu.ca/~bram/">Dr. Bram Adams</a>.</p><br/>
 	     
 	     <p>LOG6307-E (in French: "Fouille de r&eacute;f. pour mise en prod. logicielle") aims to introduce graduate students to the wonderful, yet challenging world of <a href="http://en.wikipedia.org/wiki/Release_engineering">software release engineering</a>. Software release engineering is the discipline of integrating, building, testing, deploying and releasing qualitative software releases to the end user. These activities form a vital link in today's <a href="https://en.wikipedia.org/wiki/DevOps">DevOps</a> world!</p><br/>
 
