--- a/makao.html
+++ b/makao.html
@@ -97,7 +97,7 @@ title: MAKAO, re(verse)-engineering build systems
     <li>(for re-engineering) <a href="http://search.cpan.org/~mjd/Tie-File-0.96/">Tie::File</a></li>-->
 </ul></p><br/>
 
-  <p>MAKAO has been tested extensively on <a href="http://www.gnu.org/software/make/">GNU Make 3.80+</a>, and provides preliminary support for <a href="http://www.gnu.org/software/make/">GNU Make 4.0</a> and <a href="http://www-306.ibm.com/software/awdtools/clearcase/index.html">ClearMake</a>. As long as a build dependency graph can be extracted from your build tool, MAKAO can be used to re(verse)-engineer your build layer. Example build dependency graphs of <a href="http://www.antlr.org/">ANTLR 2.7.6</a>, <a href="http://mcis.polymtl.ca/~bram/aspicere/index.html">Aspicere</a>, <a href="http://cpptest.sourceforge.net/">CppTest 1.0.2</a>, <a href="http://gaim.sourceforge.net/">Gaim 2.0.0beta3</a>, <a href="http://gcc.gnu.org/">GCC 4.1.1</a>, <a href="http://inkscape.org/">Inkscape 0.44</a>, <a href="http://ioquake3.org/">Ioquake3</a>, <a href="http://fcgp.sourceforge.net/lgp/index.html">Linux Kernel Graphing Project</a> and other systems are included in the download!</p><br/>
+  <p>MAKAO has been tested extensively on <a href="http://www.gnu.org/software/make/">GNU Make 3.80+</a>, and provides preliminary support for <a href="http://www.gnu.org/software/make/">GNU Make 4.0</a> and <a href="http://www-306.ibm.com/software/awdtools/clearcase/index.html">ClearMake</a>. As long as a build dependency graph can be extracted from your build tool, MAKAO can be used to re(verse)-engineer your build layer. Example build dependency graphs of <a href="http://www.antlr.org/">ANTLR 2.7.6</a>, <a href="http://mcis.cs.queensu.ca/~bram/aspicere/index.html">Aspicere</a>, <a href="http://cpptest.sourceforge.net/">CppTest 1.0.2</a>, <a href="http://gaim.sourceforge.net/">Gaim 2.0.0beta3</a>, <a href="http://gcc.gnu.org/">GCC 4.1.1</a>, <a href="http://inkscape.org/">Inkscape 0.44</a>, <a href="http://ioquake3.org/">Ioquake3</a>, <a href="http://fcgp.sourceforge.net/lgp/index.html">Linux Kernel Graphing Project</a> and other systems are included in the download!</p><br/>
 
 
 
@@ -226,7 +226,7 @@ $MAKAO/filtering/prolog-backward/bin/show_reduced.sh \
 $MAKAO/filtering/prolog-backward/ui/show.sh some_file-piccolo.gdf \
                  target_name{% endhighlight %}<br/>
 
-<p>With the sample rules as inspiration, you can write logic filtering rules in <code>$SOMEDIR/gdf-trace-logic.pl</code> and configure which rules are active in <code>$SOMEDIR/gdf-trace.pl</code>. This part of MAKAO is quite advanced and experimental, details are given in <a href="http://mcis.polymtl.ca/publications/2008/PhD.pdf">my PhD dissertation</a>), but feel free to contact <script type='text/javascript'>var a = new Array('gmail.com','lab.mcis@');document.write("<a href='mailto:"+a[1]+a[0]+"'>"+a[1]+a[0]+"</a>");</script>
+<p>With the sample rules as inspiration, you can write logic filtering rules in <code>$SOMEDIR/gdf-trace-logic.pl</code> and configure which rules are active in <code>$SOMEDIR/gdf-trace.pl</code>. This part of MAKAO is quite advanced and experimental, details are given in <a href="http://mcis.cs.queensu.ca/publications/2008/PhD.pdf">my PhD dissertation</a>), but feel free to contact <script type='text/javascript'>var a = new Array('gmail.com','lab.mcis@');document.write("<a href='mailto:"+a[1]+a[0]+"'>"+a[1]+a[0]+"</a>");</script>
     <noscript><a href="mailto:lab DOT mcis WHAT gmail DOT com">lab DOT mcis WHAT gmail DOT com</a><i>(DOT=. and WHAT=@)</i></noscript> in case of trouble.</p><br/>
 
 <!--<h3><a name="reeng"></a>5. Refactoring of Build Dependency Graph</h3>
@@ -261,24 +261,24 @@ $MAKAO/filtering/prolog-backward/ui/show.sh some_file-piccolo.gdf \
 
 
         <br/><h1><a name="pubs">Related Publications</a></h1>
-          <ul><li>MCINTOSH, S., ADAMS, B., KAMEI, Y., NGUYEN, T. and HASSAN, A. E. (2011). An Empirical Study of Build Maintenance Effort, in Proceedings of the 33rd International Conference on Software Engineering, ICSE (Waikiki, Honolulu, Hawaii), to appear. (Acceptance ratio: 62/441=14%)&nbsp;<a name="icse11" href="http://mcis.polymtl.ca/publications/2011/icse11.bib"><i>BibTeX</i></a></li>
+          <ul><li>MCINTOSH, S., ADAMS, B., KAMEI, Y., NGUYEN, T. and HASSAN, A. E. (2011). An Empirical Study of Build Maintenance Effort, in Proceedings of the 33rd International Conference on Software Engineering, ICSE (Waikiki, Honolulu, Hawaii), to appear. (Acceptance ratio: 62/441=14%)&nbsp;<a name="icse11" href="http://mcis.cs.queensu.ca/publications/2011/icse11.bib"><i>BibTeX</i></a></li>
       <li>
-    MCINTOSH, S., ADAMS, B. and HASSAN, A. E. (2010). <a href="http://sail.cs.queensu.ca/publications/pubs/msr2010_mcintosh.pdf">The Evolution of ANT Build Systems</a>, in Proceedings of the 7th IEEE Working Conference on Mining Software Repositories, MSR (Cape Town, South Africa), pages 42-51. (Acceptance ratio: 16/51=31.4%)&nbsp;<a name="msr10shane" href="http://mcis.polymtl.ca/publications/2010/msr10shane.bib"><i>BibTeX</i></a>
+    MCINTOSH, S., ADAMS, B. and HASSAN, A. E. (2010). <a href="http://sail.cs.queensu.ca/publications/pubs/msr2010_mcintosh.pdf">The Evolution of ANT Build Systems</a>, in Proceedings of the 7th IEEE Working Conference on Mining Software Repositories, MSR (Cape Town, South Africa), pages 42-51. (Acceptance ratio: 16/51=31.4%)&nbsp;<a name="msr10shane" href="http://mcis.cs.queensu.ca/publications/2010/msr10shane.bib"><i>BibTeX</i></a>
     </li>
      <li>
-    ADAMS, B. (2009). <a href="http://sail.cs.queensu.ca/publications/pubs/icsm09PhDSymposium.pdf">Co-Evolution of Source Code and the Build System</a>, PhD Symposium at the 25th IEEE International Conference on Software Maintenance, ICSM (Edmonton, Canada), September 2009.&nbsp;<a href="http://mcis.polymtl.ca/publications/2009/phdsym09.bib"><i>BibTeX</i></a>
+    ADAMS, B. (2009). <a href="http://sail.cs.queensu.ca/publications/pubs/icsm09PhDSymposium.pdf">Co-Evolution of Source Code and the Build System</a>, PhD Symposium at the 25th IEEE International Conference on Software Maintenance, ICSM (Edmonton, Canada), September 2009.&nbsp;<a href="http://mcis.cs.queensu.ca/publications/2009/phdsym09.bib"><i>BibTeX</i></a>
     </li>
         <li>
-    ADAMS, B. (2008). <a name="phd" href="http://mcis.polymtl.ca/publications/2008/PhD.pdf">Co-evolution of Source Code and the Build System: Impact on the Introduction of AOSD in Legacy Systems</a>, PhD dissertation, ISBN 978-90-8578-203-2, Ghent University, Belgium, May 2009.&nbsp;<a href="http://mcis.polymtl.ca/publications/2008/phd.bib"><i>BibTeX</i></a>
+    ADAMS, B. (2008). <a name="phd" href="http://mcis.cs.queensu.ca/publications/2008/PhD.pdf">Co-evolution of Source Code and the Build System: Impact on the Introduction of AOSD in Legacy Systems</a>, PhD dissertation, ISBN 978-90-8578-203-2, Ghent University, Belgium, May 2009.&nbsp;<a href="http://mcis.cs.queensu.ca/publications/2008/phd.bib"><i>BibTeX</i></a>
     </li>
     <li>
-    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2008). <a name="eceasst08" href="http://eceasst.cs.tu-berlin.de/index.php/eceasst/article/download/115/119">The Evolution of the Linux Build System</a>, in Proceedings of the ERCIM Working Group on Software Evolution 2007 (Paris, France), Electronic Communications of the ECEASST, Vol. 8., 16 p.&nbsp;<a href="http://mcis.polymtl.ca/publications/2008/eceasst.bib"><i>BibTeX</i></a>
+    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2008). <a name="eceasst08" href="http://eceasst.cs.tu-berlin.de/index.php/eceasst/article/download/115/119">The Evolution of the Linux Build System</a>, in Proceedings of the ERCIM Working Group on Software Evolution 2007 (Paris, France), Electronic Communications of the ECEASST, Vol. 8., 16 p.&nbsp;<a href="http://mcis.cs.queensu.ca/publications/2008/eceasst.bib"><i>BibTeX</i></a>
     </li>    
     <li>
-    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2007). <a name="icsm07" href="http://mcis.polymtl.ca/publications/2007/icsm.pdf">Design Recovery and Maintenance of Build Systems</a>, in Proceedings of the 23rd IEEE International Conference on Software Maintenance, ICSM, pages 114-123, IEEE Computer Society, Paris, France, October 2007. (Acceptance ratio: 46/214=21%)&nbsp;<a href="http://mcis.polymtl.ca/publications/2007/recovery.bib"><i>BibTeX</i></a>
+    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2007). <a name="icsm07" href="http://mcis.cs.queensu.ca/publications/2007/icsm.pdf">Design Recovery and Maintenance of Build Systems</a>, in Proceedings of the 23rd IEEE International Conference on Software Maintenance, ICSM, pages 114-123, IEEE Computer Society, Paris, France, October 2007. (Acceptance ratio: 46/214=21%)&nbsp;<a href="http://mcis.cs.queensu.ca/publications/2007/recovery.bib"><i>BibTeX</i></a>
     </li>
         <li>
-    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2007). <a name="icsm07-demo" href="http://mcis.polymtl.ca/publications/2007/icsm-demo.pdf">MAKAO</a> (demo), in Proceedings of the 23rd IEEE International Conference on Software Maintenance, ICSM (Paris, France), pages 517-518, IEEE Computer Society, October 2007.&nbsp;<a href="http://mcis.polymtl.ca/publications/2007/icsm-demo.bib"><i>BibTeX</i></a>
+    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2007). <a name="icsm07-demo" href="http://mcis.cs.queensu.ca/publications/2007/icsm-demo.pdf">MAKAO</a> (demo), in Proceedings of the 23rd IEEE International Conference on Software Maintenance, ICSM (Paris, France), pages 517-518, IEEE Computer Society, October 2007.&nbsp;<a href="http://mcis.cs.queensu.ca/publications/2007/icsm-demo.bib"><i>BibTeX</i></a>
     </li>
       </ul>
 
@@ -315,8 +315,8 @@ $MAKAO/filtering/prolog-backward/ui/show.sh some_file-piccolo.gdf \
 <h5>Our Other Tools</h5>
 <p>
   <ul>
-    <li><a href="http://mcis.polymtl.ca/~bram/r3v3rs3/index.html"><b>R3V3RS3</b></a></li>
-    <li><a href="http://mcis.polymtl.ca/~bram/aspicere/index.html"><b>Aspicere</b></a></li>
+    <li><a href="http://mcis.cs.queensu.ca/~bram/r3v3rs3/index.html"><b>R3V3RS3</b></a></li>
+    <li><a href="http://mcis.cs.queensu.ca/~bram/aspicere/index.html"><b>Aspicere</b></a></li>
     <li><a href="http://prologdoc.sourceforge.net/"><b>PrologDoc</b></a></li>
   </ul>
 </p>
