--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <h2><a name="2021"></a>2021</h2>
        <br/><h3>Journal</h3>
        <ul>
+         <li>QUACH, S., LAMOTHE, M., ADAMS, B., KAMEI, Y. and SHANG, W. (2021). <a href="https://users.encs.concordia.ca/~shang/pubs/Quach2021_Article_EvaluatingTheImpactOfFalselyDe.pdf">Evaluating the impact of falsely detected performance bug-inducing changes in JIT models</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_sophia.bib"><i>BibTeX</i></a></li>
          <li>KUUTILA, M., M&auml;ntyl&auml;, M., CLAES, M., ELOVAINIO, M. and ADAMS, B. (2021). <a href="https://arxiv.org/abs/2104.13713">Individual Differences Limit Predicting Well-being and Productivity Using Software Repositories: A Longitudinal Industrial Study</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_miikka.bib"><i>BibTeX</i></a></li>
          <li>CHOWDHURY, M.A.R., ABDALKAREEM, R., SHIHAB, E. and ADAMS, B. (2021). <a hname="untrivial">On the Untriviality of Trivial Packages: An Empirical Study of npm JavaScript Packages</a>, Transactions on Software Engineering (TSE), IEEE, to appear.&nbsp;<a href="publications/2021/tse_atique.bib"><i>BibTeX</i></a></li>
          <li>FOUNDJEM, A. and ADAMS, B. (2021). <a href="publications/2021/emse_armstrong.pdf">Release Synchronization in Software Ecosystems</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2021/emse_armstrong.bib"><i>BibTeX</i></a></li>
@@ -76,7 +77,10 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        </ul>  
           <br/><br/><br/><br/>
        <br/><h3>Conference</h3>
-       <ul>
+       <ul>     
+         <li>
+           FERREIRA, I., CHENG, J. and ADAMS, B. (2021). <a href="https://cscw.acm.org/2021/">The &ldquo;Shut the f**k up&rdquo; Phenomenon: Characterizing Incivility in Open Source Code Review Discussions</a>, in Proceedings of the 24th ACM Conference on Computer-Supported Cooperative Work and Social Computing, CSCW (virtual), to appear.&nbsp;<a href="publications/2021/cscw.bib"><i>BibTeX</i></a>
+         </li>
          <li>
            FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2021). <a href="publications/2021/icse_armstrong.pdf">Onboarding vs. Diversity, Productivity and Quality -- Empirical Study of the OpenStack Ecosystem</a>, in Proceedings of the 43rd International Conference on Software Engineering, ICSE (Madrid, Spain), to appear. (Acceptance ratio: 138/602=22.92%)&nbsp;<a href="publications/2021/icse_armstrong.bib"><i>BibTeX</i></a>
          </li>
