Removed redundant list.

--- a/cisc834.html
+++ b/cisc834.html
@@ -85,14 +85,14 @@ title: CISC 834, Topics in Computer Science: DevOps and Release Engineering
 <br/>
 
 
-	     <h3><a name="data">Where to get MSR Data?</a></h3>
-  {% for entry in site.data.empirical_data %}
-  <p><b><i>{{ entry.title }}:</i></b>
-<ul>
-  {% for link in entry.links %}
-  <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-  {% endfor %}
-</ul></p><br/>
-  {% endfor %}
+<!-- <h3><a name="data">Where to get MSR Data?</a></h3>
+     {% for entry in site.data.empirical_data %}
+     <p><b><i>{{ entry.title }}:</i></b>
+     <ul>
+     {% for link in entry.links %}
+     <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+     {% endfor %}
+     </ul></p><br/>
+     {% endfor %} -->
       </div>
       
