--- a/cisc834.html
+++ b/cisc834.html
@@ -1,6 +1,6 @@
 ---
 layout: index 
-title: CISC 834, Topics in Computer Science: DevOps and Release Engineering
+title: CISC 834, DevOps and Release Engineering
 ---
 
     <div class="box">
