--- a/cisc834.html
+++ b/cisc834.html
@@ -12,8 +12,8 @@ title: CISC 834, DevOps and Release Engineering
 <!--	    <li><a href="#description">Description</a></li>-->
 	    <li><a href="#practice">Practicalities</a></li>
 	    <li><a href="#success" class="urgent">Successful Projects</a></li>
-	    <li><a href="#outline">Outline</a></li>
-	    <li><a href="#data">MSR Data</a></li>
+	    <!-- <li><a href="#outline">Outline</a></li>
+	         <li><a href="#data">MSR Data</a></li> -->
           </ul>
 <br/><br/><br/>
 	                <h5>Relevant Links:</h5>
