Removing outdated lab picture.

--- a/people.html
+++ b/people.html
@@ -8,9 +8,9 @@ title: Who are these MCIS people?
 	    <div class="portfolio">
 
 <!--        <div class="tagline_left">-->
-	<a href="images/mcis16.jpg" data-gal="prettyPhoto" title="Title"><img src="images/mcis18.jpeg" alt="" height="400"/></a>
-	  <br/>
-	  <br/>
+	      <!-- <a href="images/mcis16.jpg" data-gal="prettyPhoto" title="Title"><img src="images/mcis18.jpeg" alt="" height="400"/></a>
+	           <br/>
+	           <br/> -->
           <h2>Faculty</h2>
 	  <div class="who">
 	  <table border="0" width="100%">
