--- a/cisc834.html
+++ b/cisc834.html
@@ -18,7 +18,7 @@ title: CISC 834, DevOps and Release Engineering
 <br/><br/><br/>
 	                <h5>Relevant Links:</h5>
 	    <ul>
-	      <li>onQ</li>
+	      <li><a href="https://onq.queensu.ca/d2l/home/587666">onQ</a></li>
 	      <li>&nbsp;</li>
 	      <li><a href="http://releng.polymtl.ca/">RELENG workshop</a></li>
 	      <li><a href="http://msrconf.org/">MSR conference</a></li>
