--- a/bram.html
+++ b/bram.html
@@ -389,7 +389,7 @@ title: Dr. Bram Adams
 <h5>About Me</h5>
 <p>
   <a href="http://maps.google.co.uk/maps?f=q&source=s_q&hl=en&geocode=&q=kingston+barrie+street&sll=44.229232,-76.490169&sspn=0,359.995872&ie=UTF8&radius=0.1&rq=1&ev=zi&hq=kingston+barrie+street&hnear=&ll=44.229318,-76.490472&spn=0,359.99485&t=h&z=19&layer=c&cbll=44.229232,-76.490169&panoid=9tsknL8oiOhB3SDDxusjvA&cbp=12,341.28,,1,12.1"><img src="images/me2.jpg" border="1" alt=""?></a><br/><br/>
-  I am an associate professor at <a href="http://www.polymtl.ca/">Polytechnique Montr&eacute;al</a></p><p>where I head the <a href="http://mcis.polymtl.ca/">MCIS Lab on Maintenance, Construction and Intelligence</a></p>
+  I am an associate professor at <a href="https://www.cs.queensu.ca/">the School of Computing</a> (<a href="https://www.queensu.ca/">Queen's University</a>) where I head the <a href="http://mcis.polymtl.ca/">MCIS Lab on Maintenance, Construction and Intelligence</a>.</p>
   <p>My research interests vary from release engineering, mining software repositories and green software in particular, to software evolution and reverse-engineering in general.</p>
   <p><a href="join.html">Contact me!</a>
   </p>
