--- a/bram.html
+++ b/bram.html
@@ -96,7 +96,7 @@ title: Dr. Bram Adams
                  <li>ERA track co-chair (together with <a href="http://www.inf.usi.ch/phd/robbes/">Romain Robbes</a>) of the <a href="http://icsm2013.tue.nl">29th IEEE Intl. Conf. on Software Maintenance (ICSM)</a>, September 24-26, 2013 (Eindhoven, The Netherlands)</li>
                  <li>PC co-chair (together with <a href="http://www.cs.concordia.ca/~rilling/">Juergen Rilling</a>) of the <a href="http://www.ieee-scam.org/2013/">13th IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</a>, September 22-23, 2013 (Eindhoven, The Netherlands)</li>
                  <li>session chair at the <a href="https://www-927.ibm.com/ibm/cas/cascon/">2012 Conference of the Center for Advanced Studies on Collaborative Research (CASCON)</a>, November 5-7, 2012 (Markham, Ontario, Canada)</li>  
-                 <li>workshop co-chair (together with <a href="http://www.disi.unige.it/person/RiccaF/">Filippo Ricca</a>) of the <a href="http://www.distat.unimol.it/wcre2012/">19th Working Conf. on Reverse Engineering (WCRE)</a>, October 15-18, 2012 (Palo Alto, CA, US)</li>
+                 <li>workshop co-chair (together with <a href="http://www.disi.unige.it/person/RiccaF/">Filippo Ricca</a>) of the <a href="http://www.distat.unimol.it/wcre2012/">19th Working Conf. on Reverse Engineering (WCRE)</a>, October 15-18, 2012 (Kingston, ON)</li>
                  <li>tool demo co-chair (together with <a href="http://www.cs.usask.ca/~croy/">Chanchal Roy</a>) of the <a href="http://selab.fbk.eu/icsm2012/">28th IEEE International Conference on Software Maintenance (ICSM)</a>, September 23-28, 2012 (Riva del Garda, Italy)</li>
                  <li>PC chair of the <a href="https://sites.google.com/site/iwesep2011/">3rd International Workshop on Empirical Software Engineering in Practice (IWESEP)</a>, November 1, 2011 (Nara, Japan) [<a href="http://www.ustream.tv/channel/iwesep2011">videos</a>]</li>
                  <li>session chair at the <a href="http://www.cs.wm.edu/semeru/wcre2011/">18th Working Conf. on Reverse Engineering (WCRE)</a>, October 17-20, 2011 (Lero, Limerick, Ireland)</li>
@@ -158,8 +158,8 @@ title: Dr. Bram Adams
 
     <li><a href="https://conf.researchr.org/track/icpc-2020/icpc-2020-era?">Early Research Achievements (ERA)</a> track of the <a href="https://conf.researchr.org/home/icpc-2020">28th IEEE International Conference on Program Comprehension (ICPC)</a>, July 13-15, 2020 (virtual)</li>
     <li><a href="https://semotion.github.io/2020/">5th International Workshop on Emotion Awareness in Software Engineering (SEmotion)</a>, July 13, 2020 (virtual) </li>
-    <li><a href="https://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering (ICSE)</a>, July 7-11, 2020 (virtual)</li>
     <li><a href="https://soheal.github.io/SoHeal2020/index.html">3rd International Workshop on Software Health (SoHeal)</a>, July 13, 2020 (virtual) </li>
+    <li><a href="https://conf.researchr.org/home/icse-2020">42nd International Conference on Software Engineering (ICSE)</a>, July 7-11, 2020 (virtual)</li>
 
     <li><a href="https://2020.msrconf.org/track/msr-2020-MSR-Awards?">Awards Committee</a> of the <a href="https://2020.msrconf.org/">17th Working Conf. on Mining Software Repositories (MSR)</a>, June 29-30, 2020 (virtual)</li>
     
