Updating bib information.

--- a/people.html
+++ b/people.html
@@ -58,7 +58,7 @@ title: Who are these MCIS people?
 	      <td width="140" align="right" class="who"><img src="images/vincent.jpg" height="140" /></td>
 	      <td width="80" align="left"><a href="https://www.linkedin.com/in/vincentboisselle">Vincent Boisselle</a><br/>Master's, 12/2015<br/>(with <a href="https://scholar.google.com/citations?user=tjp8NpcAAAAJ&hl=en">Dr. Alexandre Petrenko</a>)</td>
 	      <td width="140" align="right" class="who"><img src="images/mathieu.png" height="140" /></td>
-	      <td width="80" align="left">Mathieu Bollen<br/>Master's, 08/2013<br/>(with <a href="https://scholar.google.be/citations?user=3lVw3BcAAAAJ&hl=fr">Dr. Naji Habra</a>)</td>
+	      <td width="80" align="left"><a href="https://www.linkedin.com/in/mathieu-bollen-452a1281/">Mathieu Bollen</a><br/>Master's, 08/2013<br/>(with <a href="https://scholar.google.be/citations?user=3lVw3BcAAAAJ&hl=fr">Dr. Naji Habra</a>)</td>
 	      <td width="140" align="right" class="who"><img src="images/alex.jpg" height="140" /></td>
 	      <td width="80" align="left"><a href="https://www.linkedin.com/in/alexcourouble/">Alexandre Courouble</a><br/>Master's, 04/2018</td>
 	      </tr>
