--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
        <br/><h3>Conference</h3>
        <ul>     
          <li>
-           FERREIRA, I., CHENG, J. and ADAMS, B. (2021). <a href="https://cscw.acm.org/2021/">The &ldquo;Shut the f**k up&rdquo; Phenomenon: Characterizing Incivility in Open Source Code Review Discussions</a>, in Proceedings of the 24th ACM Conference on Computer-Supported Cooperative Work and Social Computing, CSCW (virtual), to appear.&nbsp;<a href="publications/2021/cscw.bib"><i>BibTeX</i></a>
+           FERREIRA, I., CHENG, J. and ADAMS, B. (2021). <a href="https://arxiv.org/pdf/2108.09905v1.pdf">The &ldquo;Shut the f**k up&rdquo; Phenomenon: Characterizing Incivility in Open Source Code Review Discussions</a>, in Proceedings of the 24th ACM Conference on Computer-Supported Cooperative Work and Social Computing, CSCW (virtual), to appear.&nbsp;<a href="publications/2021/cscw.bib"><i>BibTeX</i></a>
          </li>
          <li>
            FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2021). <a href="publications/2021/icse_armstrong.pdf">Onboarding vs. Diversity, Productivity and Quality -- Empirical Study of the OpenStack Ecosystem</a>, in Proceedings of the 43rd International Conference on Software Engineering, ICSE (Madrid, Spain), p. 1033-1045. (Acceptance ratio: 138/602=22.92%)&nbsp;<a href="publications/2021/icse_armstrong.bib"><i>BibTeX</i></a>
