Forgot the HTML change.

--- a/publications.html
+++ b/publications.html
@@ -685,7 +685,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
   <br/><h3>Journal</h3>
   <ul>
     <li>
-    ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2008). <a name="eceasst08" href="http://journal.ub.tu-berlin.de/eceasst/article/view/115">The Evolution of the Linux Build System</a>, in Proceedings of the ERCIM Working Group on Software Evolution 2007 (Paris, France), Electronic Communications of the ECEASST, Vol. 8., 16 p., ECEASST.&nbsp;<a href="publications/2008/eceasst.bib"><i>BibTeX</i></a>
+      ADAMS, B., DE SCHUTTER, K., TROMP, H. and DE MEUTER, W. (2008). <a name="eceasst08" href="publications/2008/eceasst.pdf">The Evolution of the Linux Build System</a>, in Proceedings of the ERCIM Working Group on Software Evolution 2007 (Paris, France), <a href="http://journal.ub.tu-berlin.de/eceasst/article/view/115">Electronic Communications of the ECEASST</a>, Vol. 8., 16 p., ECEASST.&nbsp;<a href="publications/2008/eceasst.bib"><i>BibTeX</i></a>
     </li>
   </ul>
   <br/><h3>Workshop</h3>
