--- a/bram.html
+++ b/bram.html
@@ -136,6 +136,8 @@ title: Dr. Bram Adams
 <h3>PC Member</h3>
 <p>
   <ul>
+    <li><a href="https://conf.researchr.org/home/icpc-2022">30th IEEE International Conference on Program Comprehension (ICPC)</a>, May 16-17, 2022 (virtual)</li>
+    <li><a href="https://conf.researchr.org/home/cain-2022">1st International Conference on AI Engineering -- Software Engineering for AI (CAIN)</a>, May 16-17, 2022 (virtual)</li>
     <li><a href="https://luxsb.lu/international-conference-ai-ss-h/">1st International Conference on the relation between Artificial Intelligence, Social Sciences and Humanities</a>, October 1, 2021 (Zagreb, Croatia)</li>
     <li><a href="https://icsme2021.github.io/cfp/DoctoralSymposium.html">Doctoral Symposium</a> track of the <a href="https://icsme2021.github.io/">37th IEEE International Conference on Software Maintenance and Evolution (ICSME)</a>, September 20-October 1, 2021 (virtual)</li>
     <li><a href="http://www.ieee-scam.org/2021/">21st IEEE Intl. Working Conf. on Source Code Analysis and Manipulation (SCAM)</a>, September 27-28, 2021 (virtual)</li>
