--- a/bram.html
+++ b/bram.html
@@ -136,6 +136,7 @@ title: Dr. Bram Adams
 <h3>PC Member</h3>
 <p>
   <ul>
+    <li><a href="https://conf.researchr.org/home/ase-2022">37th IEEE/ACM International Conference on Automated Software Engineering (ASE)</a>, September 26-October 1, 2022 (Ann Arbor, MI, USA) </li>
     <li><a href="https://conf.researchr.org/home/icpc-2022">30th IEEE International Conference on Program Comprehension (ICPC)</a>, May 16-17, 2022 (virtual)</li>
     <li><a href="https://conf.researchr.org/home/cain-2022">1st International Conference on AI Engineering -- Software Engineering for AI (CAIN)</a>, May 16-17, 2022 (virtual)</li>
     <li><a href="https://luxsb.lu/international-conference-ai-ss-h/">1st International Conference on the relation between Artificial Intelligence, Social Sciences and Humanities</a>, October 1, 2021 (Zagreb, Croatia)</li>
