--- a/publications.html
+++ b/publications.html
@@ -85,6 +85,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
          <li>
            OLEWICKI, D., NAYROLLES, N., and ADAMS, B. (2022). <a href="publications/2022/icse22.pdf">Towards Language-independent Brown Build Detection</a>, in Proceedings of the 44th International Conference on Software Engineering, ICSE (Pittsburgh, PA, USA), to appear. (Acceptance ratio: 197/751=26.23%)&nbsp;<a href="publications/2022/icse22.bib"><i>BibTeX</i></a>
          </li>
+         <li>
+           FERREIRA, I., ADAMS, B. and CHENG, J. (2022). <a hname="msr22">How heated is it? Understanding GitHub locked issues</a>, in Proceedings of the 19th International Conference on Mining Software Repositories, MSR (Pittsburgh, PA, USA), to appear. (Acceptance ratio: 47/137=34.3%)&nbsp;<a href="publications/2022/msr22.bib"><i>BibTeX</i></a>
+         </li>
        </ul>  
        <br/><br/><br/><br/>
        <br/><h3>Other</h3>
